Foundation for Plaid integration, creates link and exchanges for access

--- a/src/BonsaiBalance.Api/appsettings.Development.json
+++ b/src/BonsaiBalance.Api/appsettings.Development.json
@@ -4,6 +4,10 @@
         "ConnectionString": "mongodb://localhost:27017",
         "DatabaseName": "BonsaiBalance"
     },
+    "PlaidApiOptions": {
+        "ClientId": "",
+        "Secret": ""
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Debug",
