--- a/src/BonsaiBalance.Web/ClientApp/package.json
+++ b/src/BonsaiBalance.Web/ClientApp/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
     "ngx-plaid-link": "^1.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
