--- a/src/BonsaiBalance.Web/ClientApp/package.json
+++ b/src/BonsaiBalance.Web/ClientApp/package.json
@@ -6,19 +6,23 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.11",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
+    "@angular/material": "^12.2.11",
+    "@angular/platform-browser": "^12.2.11",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@popperjs/core": "^2.10.2",
+    "@swimlane/ngx-charts": "^19.1.0",
     "bootstrap": "^5.1.3",
     "ngx-plaid-link": "^1.0.3",
     "rxjs": "~6.6.0",
@@ -29,6 +33,8 @@
     "@angular-devkit/build-angular": "~12.2.9",
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-selection": "^3.0.1",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@types/plaid-link": "^2.0.9",
