--- a/src/BonsaiBalance.Web/Dockerfile
+++ b/src/BonsaiBalance.Web/Dockerfile
@@ -3,8 +3,8 @@ WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["BonsaiBalance.Web/BonsaiBalance.Web/BonsaiBalance.Web.csproj", "BonsaiBalance.Web/"]
-RUN dotnet restore "BonsaiBalance.Web/BonsaiBalance.Web/BonsaiBalance.Web.csproj"
+COPY ["BonsaiBalance.Web.csproj", "BonsaiBalance.Web/"]
+RUN dotnet restore "BonsaiBalance.Web/BonsaiBalance.Web.csproj"
 COPY . .
 WORKDIR "/src/BonsaiBalance.Web"
 RUN dotnet build "BonsaiBalance.Web.csproj" -c Release -o /app/build
