--- a/src/BonsaiBalance.Web/Dockerfile
+++ b/src/BonsaiBalance.Web/Dockerfile
@@ -8,7 +8,7 @@ RUN dotnet restore "BonsaiBalance.Web/BonsaiBalance.Web.csproj"
 COPY . "BonsaiBalance.Web"
 RUN apt-get update -yq && apt-get upgrade -yq && apt-get install -yq curl git --no-install-recommends
 RUN curl -sL https://deb.nodesource.com/setup_14.x | bash - && apt-get install -yq nodejs build-essential --no-install-recommends
-RUN npm install -g npm
+RUN npm install -g npm@latest-6
 WORKDIR "/src/BonsaiBalance.Web"
 RUN dotnet build "BonsaiBalance.Web.csproj" -c Release -o /app/build
 
