--- a/src/BonsaiBalance.Web/Dockerfile
+++ b/src/BonsaiBalance.Web/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/runtime:5.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
@@ -18,4 +18,5 @@ RUN dotnet publish "BonsaiBalance.Web.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+EXPOSE 80
 ENTRYPOINT ["dotnet", "BonsaiBalance.Web.dll"]
