--- a/src/BonsaiBalance.Api/Dockerfile
+++ b/src/BonsaiBalance.Api/Dockerfile
@@ -1,11 +1,11 @@
-﻿FROM mcr.microsoft.com/dotnet/runtime:5.0 AS base
+﻿FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["BonsaiBalance.Api/BonsaiBalance.Api/BonsaiBalance.Api.csproj", "BonsaiBalance.Api/"]
-RUN dotnet restore "BonsaiBalance.Api/BonsaiBalance.Api/BonsaiBalance.Api.csproj"
-COPY . .
+COPY ["BonsaiBalance.Api.csproj", "BonsaiBalance.Api/"]
+RUN dotnet restore "BonsaiBalance.Api/BonsaiBalance.Api.csproj"
+COPY . "BonsaiBalance.Api"
 WORKDIR "/src/BonsaiBalance.Api"
 RUN dotnet build "BonsaiBalance.Api.csproj" -c Release -o /app/build
 
@@ -15,4 +15,5 @@ RUN dotnet publish "BonsaiBalance.Api.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+EXPOSE 80
 ENTRYPOINT ["dotnet", "BonsaiBalance.Api.dll"]
