--- a/src/BonsaiBalance.Mobile/BaseProject/package.json
+++ b/src/BonsaiBalance.Mobile/BaseProject/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.0.0",
-    "react-native": "0.69.3"
+    "react-native": "0.69.3",
+    "twrnc": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -28,6 +29,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
     "react-test-renderer": "18.0.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.4.4"
   },
   "jest": {
