--- a/src/BonsaiBalance.Mobile/BaseProject/package.json
+++ b/src/BonsaiBalance.Mobile/BaseProject/package.json
@@ -10,8 +10,15 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "react": "18.0.0",
     "react-native": "0.69.3",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-svg": "^13.4.0",
     "twrnc": "^3.4.0"
   },
   "devDependencies": {
